# pulse_diesel_axum

./: .env  Cargo.toml  README.md
migrations/2024-04-02-205221_init/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs
src/infra/db/: schema.rs
src/infra/repositories/: token.rs  user.rs
