[package]
name = "pulse_diesel_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
diesel = "2.1.5"
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
# ???deadpool???
bb8 = "0.8.3"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"